# Messenger-Dog

./: Cargo.toml  lefthook.yml
.github/workflows/: ci.yml  reviewdog.yml  scheduled.yml
api/: subscribe.hurl
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
